--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
   margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  overflow: hidden;
 }
 
 body {
@@ -34,15 +35,16 @@ body .bg-image {
   -webkit-transform: scale(0.4);
           transform: scale(0.4);
   overflow: hidden;
+  width: auto;
 }
 
 body #wishTitle {
   padding-bottom: 30px;
 }
 
-@media screen and (max-width: 500px) {
-  body {
-    overflow: hidden;
+@media screen and (max-width: 480px) {
+  body .bg-image {
+    width: 110vh;
   }
   body h1 {
     font-size: 40px;
