--- a/styles.scss
+++ b/styles.scss
@@ -4,6 +4,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 
@@ -14,6 +15,7 @@ body{
        opacity: 0.5;
        transform: scale(0.4);
        overflow: hidden;
+       width: auto;
     }
     height: 100vh;
     font-family: 'Righteous', sans-serif;
@@ -27,8 +29,11 @@ body{
     #wishTitle{
         padding-bottom: 30px;
     }
-    @media screen and (max-width: 500px) {
-        overflow: hidden;
+    @media screen and (max-width: 480px) {
+        .bg-image{
+            width: 110vh;
+        }
+        
         h1{
             font-size: 40px;
         }
