--- a/styles.css
+++ b/styles.css
@@ -56,9 +56,9 @@ body #wishTitle {
     font-size: 30px;
   }
   body .timer {
-    -webkit-box-pack: space-evenly !important;
-        -ms-flex-pack: space-evenly !important;
-            justify-content: space-evenly !important;
+    -webkit-box-pack: justify !important;
+        -ms-flex-pack: justify !important;
+            justify-content: space-between !important;
   }
 }
 
