--- a/styles.scss
+++ b/styles.scss
@@ -44,7 +44,7 @@ body{
             font-size: 30px;
         }
         .timer{
-            justify-content: space-evenly !important;
+            justify-content: space-between !important;
         }
     }
     .timer{
