--- a/styles.css
+++ b/styles.css
@@ -56,9 +56,15 @@ body #wishTitle {
     font-size: 30px;
   }
   body .timer {
-    -webkit-box-pack: justify !important;
-        -ms-flex-pack: justify !important;
-            justify-content: space-between !important;
+    -webkit-box-pack: space-evenly !important;
+        -ms-flex-pack: space-evenly !important;
+            justify-content: space-evenly !important;
+  }
+  body .timer #hour {
+    padding-left: 10px;
+  }
+  body .timer #second {
+    padding-right: 10px;
   }
 }
 
