--- a/styles.scss
+++ b/styles.scss
@@ -60,6 +60,9 @@ body{
         flex-direction: row;
         justify-content: space-between;
     }
+    #final-message{
+        display: none;
+    }
 }
 
 
