--- a/styles.scss
+++ b/styles.scss
@@ -17,6 +17,9 @@ body{
        overflow: hidden;
        width: auto;
     }
+    h4{
+        font-size: 25px;
+    }
     height: 100vh;
     font-family: 'Righteous', sans-serif;
     font-size: 2.5rem;
